- security update - remove "Equipe Apostolique"from th top - add sharing button for event - add sharing button for celebrations - add slides on the home page - hide text on ads - change status for slide

--- a/app/Resources/views/localNew.html.twig
+++ b/app/Resources/views/localNew.html.twig
@@ -36,7 +36,7 @@
             <section class="right">
                 <ul class="nav">
                     {#<li><a target="_blank" href="{{ path('gospelcenterPageGlobal_home') }}">{{ 'gc.nav.gcmovement'|trans }}</a></li>#}
-                    <li><a target="_blank" href="http://www.ministeres.org">{{ 'gc.nav.apostolicTeam'|trans }}</a></li>
+                    {#<li><a target="_blank" href="http://www.ministeres.org">{{ 'gc.nav.apostolicTeam'|trans }}</a></li>#}
                 </ul>
                 {% if app.user %}
                     {% include "::admin/param.html.twig" %}
