--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/list.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/list.html.twig
@@ -14,7 +14,7 @@
     <table class="main">
         <thead>
         <tr>
-            <th data-sort="string">Title<span>Title<div class="arrow"></div></span></th>
+            <th data-sort="string">{{ 'gc.admin.pages.title'|trans }}<span>{{ 'gc.admin.pages.title'|trans }}<div class="arrow"></div></span></th>
             <th data-sort="string">Menu<span>Menu<div class="arrow"></div></span></th>
             <th data-sort="string">Language<span>Language<div class="arrow"></div></span></th>
         </tr>
