--- a/web/sass/advanced/_events.scss
+++ b/web/sass/advanced/_events.scss
@@ -249,6 +249,56 @@
                 margin: 70px auto 0;
             }
 
+            .social {
+                margin-top: 20px;
+
+                ul {
+
+                    li {
+                        display: inline-block;
+                        vertical-align: top;
+
+                        &:first-of-type {
+                            a.icon {
+                                margin-left: 0;
+                            }
+                        }
+
+
+                        a.icon {
+                            display: inline-block;
+                            height: 30px;
+                            margin: 10px;
+                            background-size: contain;
+                            background-repeat: no-repeat;
+                            background-position: center;
+
+                            text-indent: 100%;
+                            white-space: nowrap;
+                            overflow: hidden;
+
+                            &#facebook {
+                                width: 30px;
+                                background-image: url('../images/link_facebook.svg');
+
+                                &:hover {
+                                    background-image: url('../images/link_facebook_hover.svg');
+                                }
+                            }
+
+                            &#twitter {
+                                width: 30px;
+                                background-image: url('../images/link_twitter.svg');
+
+                                &:hover {
+                                    background-image: url('../images/link_twitter_hover.svg');
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
             &.left,
             &.right {
                 display: inline-block;
