--- a/src/gospelcenter/AdminBundle/Resources/views/Celebration/add.html.twig
+++ b/src/gospelcenter/AdminBundle/Resources/views/Celebration/add.html.twig
@@ -79,7 +79,7 @@
                     {{ form_widget(form.location) }}
                     {{ form_errors(form.location) }}
 
-                    <section class="selectList" id="speakerSearch" data-title="Select speakers" data-center="{{ center.ref }}"></section>
+                    <section class="selectList" id="speakerSearch" data-title="{{ 'gc.admin.celebrations.selectSpeakers'|trans }}" data-center="{{ center.ref }}"></section>
 
                     {{ form_widget(form.existingSpeakers) }}
                     {{ form_errors(form.existingSpeakers) }}
@@ -99,7 +99,7 @@
                     {{ form_widget(form.video) }}
                     {{ form_errors(form.video) }}
 
-                    <section class="selectList" id="soundCloudSearch" data-title="Select an audio" data-center="{{ center.ref }}"></section>
+                    <section class="selectList" id="soundCloudSearch" data-title="{{ 'gc.admin.celebrations.selectAudio'|trans }}" data-center="{{ center.ref }}"></section>
 
                     {{ form_widget(form.audio) }}
                     {{ form_errors(form.audio) }}
