--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlide/list.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlide/list.html.twig
@@ -16,6 +16,7 @@
         <tr>
             <th data-sort="string">Title<span>Title<div class="arrow"></div></span></th>
             <th data-sort="string">Page<span>Page<div class="arrow"></div></span></th>
+            <th data-sort="string">Status<span>Status<div class="arrow"></div></span></th>
         </tr>
         </thead>
         <tbody>
@@ -36,10 +37,16 @@
                         {% endif %}
                     </a>
                 </td>
+
+                <td>
+                    <a href="{{ link }}">
+                        <span>{% if slide.status %}Actif{% endif %}</span>
+                    </a>
+                </td>
             </tr>
         {% else %}
             <tr class="empty">
-                <td colspan="2">There are no slides.</td>
+                <td colspan="3">There are no slides.</td>
             </tr>
         {% endfor %}
         </tbody>
