--- a/src/gospelcenter/PageBundle/Resources/views/Page/index.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/index.html.twig
@@ -13,9 +13,13 @@
     <h1 class="titlePage"><span>{{ article.title }}</span></h1>
     <h2 class="slogan">{{ article.slogan }}</h2>
 
-    <section class="slider" id="1">
+    {% if slides|length == 1 %}
+        <section class="slider" id="one">
+    {% else %}
+        <section class="slider" id="1">
+    {% endif %}
         {% spaceless %}
-            {% for slide in article.slides %}
+            {% for slide in slides %}
                 <article id="{{ loop.index }}" class="slide {% if loop.index == 1 %}current{% endif %}"
 
                         {% if slide.image %}
