--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
@@ -33,6 +33,7 @@
                 <li><a href="#about" class="current focus">{{ 'gc.page.about.nav.about'|trans }}</a></li>
                 <li><a href="#leadership">{{ 'gc.page.about.nav.leadership'|trans }}</a></li>
                 <li><a href="#staff">{{ 'gc.page.about.nav.staff'|trans }}</a></li>
+                <li><a href="#coaching">{{ 'gc.page.about.nav.coaching'|trans }}</a></li>
                 <li><a href="#what-we-believe">{{ 'gc.page.about.nav.believe'|trans }}</a></li>
             </ul>
         {% endspaceless %}
@@ -280,6 +281,35 @@
 
             <p>Cédric Trachsel</p>
         </article>
+    </article>
+
+    <article class="tab blog-style" id="coaching">
+
+        <h1>Accompagnement personnalisé</h1>
+
+        {% set coachingImg = 'bundles/gospelcenterpage/images/jura_coaching.jpg' %}
+
+        <img class="big"
+             src="{{ asset(coachingImg)| imagine_filter('blog_big_low') }}"
+             srcset="{{ asset(coachingImg)| imagine_filter('blog_big_low') }} 2x"
+             data-img="{{ asset(coachingImg)| imagine_filter('blog_big') }}"
+             data-img_2x="{{ asset(coachingImg)| imagine_filter('blog_big_2x') }}"
+             data-img_tablet="{{ asset(coachingImg)| imagine_filter('blog_big_tablet') }}"
+             data-img_tablet_2x="{{ asset(coachingImg)| imagine_filter('blog_big_tablet_2x') }}"
+             data-img_mobile="{{ asset(coachingImg)| imagine_filter('blog_big_mobile') }}"
+             data-img_mobile_2x="{{ asset(coachingImg)| imagine_filter('blog_big_mobile_2x') }}">
+
+        <p>Le coaching est un accompagnement personnalisé pour tous ceux qui recherchent un affermissement de leur foi en Dieu.</p>
+        <p>Vous voulez voir des résultats concrets et mesurables dans l’approfondissement de votre intimité avec Dieu, améliorer certains aspects de votre vie chrétienne et vous fixer des objectifs?</p>
+
+        <p>Contactez nous!</p>
+
+        <article class="frame">
+            <h1>Pierre et Marie-Claude Crelier</h1>
+
+            <p><a href="mailto:coaching@gc-jura.org">coaching@gc-jura.org</a></p>
+        </article>
+
     </article>
 
 
