--- a/web/sass/advanced/_home.scss
+++ b/web/sass/advanced/_home.scss
@@ -101,6 +101,119 @@
         }
     }
 
+    &.simpleHeader {
+
+        @media only screen and (max-width: $tabletH) {
+            section.slider article.slide div.link {
+                bottom: 10%;
+            }
+        }
+
+        @media only screen and (max-width: $mobileH) {
+            header {
+                height: inherit;
+                background-color: transparent;
+                padding-bottom: 0;
+            }
+
+            section.slider {
+                article.slide {
+                    section.content {
+                        h1 {
+
+                            span {
+                                white-space: normal;
+                                line-height: 1.2em;
+                            }
+                        }
+                    }
+                }
+            }
+
+            nav.main {
+                top: 0;
+            }
+        }
+
+        header {
+            height: inherit;
+            background-color: transparent;
+        }
+
+        #container {
+            section.links {
+                //margin-top: 4px;
+            }
+        }
+
+        section.slider {
+            margin: 0;
+
+            article.slide {
+                section.content {
+
+                    text-align: center;
+
+                    h1 {
+                        font-size: 2.5em;
+                        margin-bottom: 30px;
+                        padding-top: 20px;
+
+                        span {
+                            border-color: $whiteGC;
+                        }
+                    }
+
+                    p {
+                        font-size: 2em;
+                    }
+                }
+
+                div.link {
+                    a {
+                        font-size: 1.4em;
+                        padding-top: 8px;
+                        border-width: 2px;
+                        background-color: $whiteGC;
+                        color: $blackGC;
+                    }
+                }
+
+            }
+
+            a.slidesjs-navigation {
+                color: transparent;
+                top: 70px;
+            }
+
+            ul.slidesjs-pagination {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index: 100;
+
+                li {
+
+                    a {
+                        color: transparent;
+                        border-color: $whiteGC;
+                        background-color: transparent;
+
+                        &.active {
+                            background-color: $whiteGC;
+                        }
+                    }
+                }
+            }
+        }
+
+        nav.main {
+            top: 0;
+            z-index: 1000;
+        }
+    }
+
     section.links {
         margin: 50px auto 70px;
         width: 100%;
@@ -407,7 +520,6 @@
         @include homeMobileResp(400px);
 
         @include adsMobileResp(190px);
-
 
         & > header {
             nav.mobile {
